complete javafx helloworld